Fix image misalign inline

--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -62,6 +62,7 @@ $opensans-bold: "Open Sans Bold";
 }
 
 .pic {
+  display: block;
   width: 100%;
   height: 100%;
   mix-blend-mode: multiply;
@@ -72,7 +73,7 @@ $opensans-bold: "Open Sans Bold";
 .wrapper:hover {
   .pic {
     filter: none;
-    transform: translate(-20px, -15px);
+    // transform: translate(-20px, -15px);
     transition: 0.3s;
     mix-blend-mode: normal;
   }
@@ -81,15 +82,38 @@ $opensans-bold: "Open Sans Bold";
 
 .lists {
   display: flex;
-  justify-content: center;
   // justify-content: space-between;
 }
 
 ul {
+  list-style-position: inside;
+  list-style: none;
   margin-right: 2rem;
 }
 
 li {
   font-family: $oxygen-mono;
   font-size: 14px;
+}
+
+li::before {
+  content: "■";
+  color: $orange;
+  display: inline-block;
+  width: 1rem;
+}
+
+// li::marker {
+//   color: red;
+//   content: "►";
+// }
+
+@media screen and (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
+
+  .rightside {
+    order: -1;
+  }
 }
